RESOLVED FIXED 193035
[JSC][Win][Clang] warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion]
https://bugs.webkit.org/show_bug.cgi?id=193035
Summary [JSC][Win][Clang] warning: implicit conversion from 'size_t' (aka 'unsigned l...
Fujii Hironori
Reported 2018-12-25 22:47:44 PST
[JSC][Win][Clang] warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] clang-cl reports the following warnings for WinCairo port x64 builds: > ..\..\Source\JavaScriptCore\dfg/DFGJITCompiler.cpp(390,29): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] > ..\..\Source\JavaScriptCore\dfg/DFGJITCompiler.cpp(466,29): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] > ..\..\Source\JavaScriptCore\dfg/DFGJITCompiler.cpp(486,33): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] > ..\..\Source\JavaScriptCore\jit/JIT.cpp(732,29): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] > ..\..\Source\JavaScriptCore\jit/JIT.cpp(749,33): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion] > ..\..\Source\JavaScriptCore\jit/ThunkGenerators.cpp(93,43): warning: implicit conversion from 'size_t' (aka 'unsigned long long') to 'int32_t' (aka 'int') changes value from 18446744073709551552 to -64 [-Wconstant-conversion]
Attachments
Patch (5.63 KB, patch)
2018-12-25 22:55 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-12-25 22:55:12 PST
Yusuke Suzuki
Comment 2 2018-12-25 23:39:19 PST
Comment on attachment 358075 [details] Patch r=me
Fujii Hironori
Comment 3 2018-12-25 23:53:38 PST
Comment on attachment 358075 [details] Patch Clearing flags on attachment: 358075 Committed r239552: <https://trac.webkit.org/changeset/239552>
Fujii Hironori
Comment 4 2018-12-25 23:53:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-12-25 23:54:23 PST
Note You need to log in before you can comment on or make changes to this bug.